--- a/chatPromptTemplate/1.langchain_chatPromptTemplate.ipynb
+++ b/chatPromptTemplate/1.langchain_chatPromptTemplate.ipynb
@@ -249,21 +249,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "client=<groq.resources.chat.completions.Completions object at 0x151f7c690> async_client=<groq.resources.chat.completions.AsyncCompletions object at 0x151f7d090> model_name='llama-3.1-8b-instant' temperature=0.5 model_kwargs={} groq_api_key=SecretStr('**********')\n"
+      "client=<groq.resources.chat.completions.Completions object at 0x150008cb0> async_client=<groq.resources.chat.completions.AsyncCompletions object at 0x1500095b0> model_name='llama-3.1-8b-instant' temperature=0.1 model_kwargs={} groq_api_key=SecretStr('**********')\n"
      ]
     }
    ],
    "source": [
     "newllm = ChatGroq(\n",
     "    model=\"llama-3.1-8b-instant\",\n",
-    "    temperature=0.5\n",
+    "    temperature=0.1\n",
     ")\n",
     "print(newllm)"
    ]
@@ -431,28 +431,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Elavarasan case refers to the disappearance and subsequent death of V. Elavarasan, a 23-year-old Indian man who went missing in 2009. He was the husband of a woman from the Bharatiya Agniyar Noolaga Sangam (BANS) community, a subgroup of the Tamil people.\n",
+      "The case you're referring to is the disproportionate assets case against V.K. Sasikala, the close aide and confidante of the late Tamil Nadu Chief Minister J. Jayalalithaa.\n",
       "\n",
-      "After a lengthy investigation and several court cases, the final verdict in the Elavarasan case is as follows:\n",
+      "After Jayalalithaa's demise in 2016, the case continued against Sasikala. Here's a brief summary of the final verdict:\n",
       "\n",
-      "In 2010, Elavarasan's body was found in a forest in the Theni district of Tamil Nadu, India. The police initially suspected that he had died in a motorcycle accident, but his family and the BANS community claimed that he was murdered by members of the community.\n",
+      "**Trial Court Verdict (2017):**\n",
+      "In September 2017, the Bengaluru Special Court acquitted Sasikala and two of her relatives, Ilavarasi and V.N. Sudhakaran, in the disproportionate assets case. The court held that the prosecution had failed to prove the charges against them.\n",
       "\n",
-      "The case was investigated by the Madurai bench of the Madras High Court, which ordered a CBI inquiry into the matter. The CBI inquiry concluded that Elavarasan had died due to a motorcycle accident, and that there was no evidence to suggest that he was murdered.\n",
+      "**High Court Verdict (2018):**\n",
+      "However, the Karnataka High Court set aside the acquittal in March 2018, citing irregularities in the trial court's proceedings. The High Court ordered a retrial in the case.\n",
       "\n",
-      "However, the BANS community and Elavarasan's family continued to claim that he was murdered. They filed a petition in the Madurai Bench of the Madras High Court, which ordered a fresh investigation into the case.\n",
+      "**Supreme Court Verdict (2019):**\n",
+      "In February 2019, the Supreme Court of India upheld the High Court's order and set aside the acquittal. The Supreme Court also directed the trial court to conduct a fresh trial in the case.\n",
       "\n",
-      "In 2013, the High Court ordered the CBI to conduct a fresh investigation into the case. The CBI submitted its report in 2014, which concluded that Elavarasan's death was due to a motorcycle accident.\n",
+      "**Trial Court Verdict (2019):**\n",
+      "In April 2019, the Bengaluru Special Court convicted Sasikala and her relatives, Ilavarasi and V.N. Sudhakaran, in the disproportionate assets case. The court sentenced them to four years in prison and imposed a fine of ₹10 crore each.\n",
       "\n",
-      "The Madurai Bench of the Madras High Court delivered its final verdict in the Elavarasan case on July 15, 2014. The court accepted the CBI's report and held that Elavarasan's death was due to a motorcycle accident. The court also exonerated the BANS community members who were accused of murdering Elavarasan.\n",
+      "**Appeal and Conviction:**\n",
+      "Sasikala and her relatives appealed against the conviction, but the Karnataka High Court upheld the trial court's verdict in 2020. The Supreme Court also dismissed their appeal in 2020, confirming the conviction.\n",
       "\n",
-      "The final verdict in the Elavarasan case has been upheld by the Supreme Court of India, which dismissed a petition filed by Elavarasan's family challenging the High Court's verdict in 2015.\n"
+      "**Sasikala's Imprisonment:**\n",
+      "Sasikala was imprisoned in 2017, but she was granted bail in 2019. However, she was re-arrested in 2019 after the Supreme Court upheld her conviction. She was imprisoned until 2021, when she was released on parole due to the COVID-19 pandemic.\n",
+      "\n",
+      "In summary, the final verdict in the Sasikala-Jayalalithaa case is that Sasikala and her relatives were convicted of disproportionate assets and sentenced to four years in prison, with a fine of ₹10 crore each.\n"
      ]
     }
    ],
@@ -465,7 +473,7 @@
     "\n",
     "response = updated_chain.invoke(\n",
     "    {\n",
-    "        \"input\" : \"what is the final verdict in elavarasan case ?\"\n",
+    "        \"input\" : \"list me the final verdict of sasikala, jayalalitha case after her demise.\"\n",
     "    }\n",
     ")\n",
     "\n",
@@ -485,11 +493,205 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "JSON Output parser\n",
+    "\n",
+    "\n",
+    "This is the information gets to the LLM\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Return a JSON object.'"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain_core.output_parsers import JsonOutputParser\n",
+    "outputParser = JsonOutputParser()\n",
+    "outputParser.get_format_instructions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The output should be formatted as a XML file.\\n1. Output should conform to the tags below.\\n2. If tags are not given, make them on your own.\\n3. Remember to always open and close all the tags.\\n\\nAs an example, for the tags [\"foo\", \"bar\", \"baz\"]:\\n1. String \"<foo>\\n   <bar>\\n      <baz></baz>\\n   </bar>\\n</foo>\" is a well-formatted instance of the schema.\\n2. String \"<foo>\\n   <bar>\\n   </foo>\" is a badly-formatted instance.\\n3. String \"<foo>\\n   <tag>\\n   </tag>\\n</foo>\" is a badly-formatted instance.\\n\\nHere are the output tags:\\n```\\nNone\\n```'"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from langchain_core.output_parsers import XMLOutputParser\n",
+    "outputParser = XMLOutputParser()\n",
+    "outputParser.get_format_instructions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.output_parsers import JsonOutputParser\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "\n",
+    "outputParser = JsonOutputParser()\n",
+    "\n",
+    "format = PromptTemplate(\n",
+    "    template = \"answer the user query \\n {format_instruction} \\n understand the {query}\",\n",
+    "    input_variables = [\"query\"],\n",
+    "    partial_variables = {\"format_instruction\" : outputParser.get_format_instructions()},  # format_instruction: outputParser.get_format_instructions() -> 'Return a JSON object.'\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input_variables=['query'] input_types={} partial_variables={'format_instruction': 'Return a JSON object.'} template='answer the user query \\n {format_instruction} \\n understand the {query}'\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(format)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "when to use prompttemplate and when to use chat prompt template ?\n",
+    "\n",
+    "conversational like chat bot -> chat prompt template cause it has list of conversation\n",
+    "\n",
+    "prompt template -> single conversation\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "updated_chain = format | newllm | outputParser"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'sections': [{'section': '323', 'punishment': 'Imprisonment up to 1 year, or fine of up to Rs. 1,000, or both'}, {'section': '325', 'punishment': 'Imprisonment up to 7 years, and shall also be liable to fine'}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = updated_chain.invoke(\n",
+    "    {\n",
+    "        \"query\" : \"what is IPC 420 ? how many years of imprissionment for adult and senior citizens?\"\n",
+    "    }\n",
+    ")\n",
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "Lets try with XML parser\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input_variables=['user_query'] input_types={} partial_variables={'xmlformat': 'The output should be formatted as a XML file.\\n1. Output should conform to the tags below.\\n2. If tags are not given, make them on your own.\\n3. Remember to always open and close all the tags.\\n\\nAs an example, for the tags [\"foo\", \"bar\", \"baz\"]:\\n1. String \"<foo>\\n   <bar>\\n      <baz></baz>\\n   </bar>\\n</foo>\" is a well-formatted instance of the schema.\\n2. String \"<foo>\\n   <bar>\\n   </foo>\" is a badly-formatted instance.\\n3. String \"<foo>\\n   <tag>\\n   </tag>\\n</foo>\" is a badly-formatted instance.\\n\\nHere are the output tags:\\n```\\nNone\\n```'} template='answer the query in \\n {xmlformat} \\n understand and answer the {user_query}'\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain.output_parsers import XMLOutputParser\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "\n",
+    "xmloutputParser = XMLOutputParser()\n",
+    "\n",
+    "xmlformat  = PromptTemplate(\n",
+    "    template = \"answer the query in \\n {xmlformat} \\n understand and answer the {user_query}\",\n",
+    "    input_variables = [\"user_query\"],\n",
+    "    partial_variables = {\"xmlformat\" : xmloutputParser.get_format_instructions()}\n",
+    ") \n",
+    "\n",
+    "print(xmlformat)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'root': [{'question': 'What is IPC 420?'}, {'answer': [{'description': 'IPC 420 refers to Section 420 of the Indian Penal Code.'}, {'section': 'Section 420 of the Indian Penal Code'}, {'definition': 'Cheating and dishonestly inducing delivery of property'}]}, {'question': 'What is the imprisonment for IPC 420?'}, {'answer': [{'description': 'The imprisonment for IPC 420 varies based on the age of the offender.'}, {'adult': 'Adults (above 21 years): Up to 7 years of imprisonment'}, {'senior_citizen': 'Senior citizens (above 60 years): Up to 7 years of imprisonment'}]}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "updated_chain = xmlformat | newllm | xmloutputParser\n",
+    "\n",
+    "response = updated_chain.invoke(\n",
+    "    {\n",
+    "        \"user_query\" : \"what is IPC 420 ? how many years of imprissionment for adult and senior citizens?\"\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "print(response)"
+   ]
   }
  ],
  "metadata": {
