lemmatization and vectors

--- a/NLP/4_open_ai.ipynb
+++ b/NLP/4_open_ai.ipynb
@@ -25,12 +25,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from openai import OpenAI\n",
-    "client=OpenAI(api_key = \"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\")"
+    "client=OpenAI(api_key = \"\")"
    ]
   },
   {
